src/public/styles/style.css
* {
    padding: 0;
    margin: 0;
}


body {
    background: #ffecc5;
}


.haddock {
    position: relative;
}

.speech-bubble {
    position: absolute;
    height: 70px;
    width: 100%;
    background: url("../images/speech-bubble.webp") no-repeat;
    background-size: contain;
    right: -245px;
    top: -100px;
    padding: 50px 50px;
    font-family: 'Bangers', cursive;
    font-size: 2.5rem;
    color: #343434;
    letter-spacing: 1px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

main {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-top: 7rem;
}

section {
    max-width: 80rem;
    padding: 0 2rem;
}

.heading {
    font-family: 'Bangers', cursive;
    font-size: 4rem;
    letter-spacing: 5px;
    color: #343434;
}

.paragraph {
    font-family: 'Lobster', cursive;
    font-size: 2rem;
    color: #505050;
}

.lorem-ipsum-paragraph {
    font-size: 1.5rem;
    font-family: 'Comic Neue', cursive;
    color: #3e3e3e;
    line-height: 35px;
    margin-bottom: 1.5rem;
    text-align: justify;
}

.button {
    padding: 1rem 2rem;
    outline: none;
    font-family: 'Lobster', cursive;
    font-size: 1.5rem;
    border: 4px solid white;
    color: white;
    cursor: pointer;
}

.generate-paragraph-form {
    position: sticky;
    top: 0;
    background: #ffecc5;
    padding-bottom: 1.5rem;
}

.generate-paragraph-form input[type=number] {
    padding: 1rem 0;
    text-indent: 1rem;
    outline: none;
    width: 100%;
    margin: 1.5rem 0;
    font-family: 'Lobster', cursive;
    border: 4px solid white;
    background-color: #f7f7f7;
    color: #686868;
    font-size: 1.5rem;
}

.generate-paragraph-form input[type=submit] {
    background-color: #57a2cd;
}

.generate-paragraph-form span {
    background-color: #c44928;
}

.snowy {
    height: 10vh;
    position: fixed;
    bottom: 0;
    right: 0;
}

